# Projects_MyLibrary_v2

./: .flake8  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
app/: apps.py
app/common/: models.py
config/: settings.py
config/settings/: base.py
