[tool.poetry]
name = "projects_mylibrary_v2"
version = "0.1.0"
description = "Version 2 of project my library"
authors = ["Gabriel Costa"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
python-decouple = "^3.6"
psycopg2-binary = "^2.9.4"
pylint = "^2.15.5"
django-suit-v2 = "^2.0"
django-jazzmin = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-django = "^4.5.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
